Update on web layout and FastAPI: search results was not fully mobile ready, which I fixed now so that the search results are fully responsive on mobile as well. Furthermore, I updated the endpoint for artist.getInfo. It now includes all necessary data when being used.
Former-commit-id: cfadc95e07a21e36e61498292fdbb78f4fd0116d [formerly cfadc95e07a21e36e61498292fdbb78f4fd0116d [formerly 329ddc02aec125c6dc71969de967c6ecbad4e25f]]
Former-commit-id: 1481b3220bb3b6283e8b70ab665b7affe0a8d78e
Former-commit-id: 6678fbd925290536653981a921ef58e1e95014cf

--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -264,6 +264,11 @@ img {
     height: 125px;
 }
 
+.mobile-col{
+    text-align: center; 
+    margin-right:20px;
+}
+
 /* Mobile Styling */
 @media only screen and (max-width: 600px) {
     .top-bar {
@@ -356,6 +361,20 @@ img {
         margin-bottom: 25px;
     }
 
+    .mobile-col{
+        width:100%;
+        margin-right:0px;
+        margin-bottom:20px;
+    }
+
+    .width_set{
+        width:100%;
+    }
+
+    .mobile-disable{
+        display: none;
+    }
+
     .logo_footer {
         width: 200px;
         height: auto;
@@ -403,4 +422,5 @@ img {
     .ms_banner_text {
         width: calc(100% - 50%);
     }
+
 }
